force-app/main/default/objects/CustomException__c/CustomException__c.object-meta.xml
<CustomObject>
    <label>Custom Exception</label>
    <nameField>
        <displayFormat>Log-{000000}</displayFormat>
        <label>Custom Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>