force-app/main/default/objects/CustomException__c/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <defaultValue>&apos;Not Populated&apos;</defaultValue>
    <description>This field holds the Name of the class logging the error. This field is populated by the &apos;HandleCustomException&apos; Class or the &apos;Sub: Error Log&apos; (SubFlowErrorLogging) sub-Flow. This field&apos;s FLS is not assigned to any profile by default. Assign the user the &apos;View Error Log Permission&apos; Permission Set in order to provide access.</description>
    <label>ClassName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>