force-app/main/default/objects/CustomException__c/fields/GovtLimitinExecutingCode__c.field-meta.xml
<CustomField>
    <fullName>GovtLimitinExecutingCode__c</fullName>
    <label>Govt Limit in Executing Code</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>