force-app/main/default/objects/CustomException__c/fields/LogDateTime__c.field-meta.xml
<CustomField>
    <fullName>LogDateTime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Log Date/Time</label>
    <type>DateTime</type>
</CustomField>