force-app/main/default/objects/CustomException__c/recordTypes/Apex.recordType-meta.xml
<RecordType>
    <fullName>Apex</fullName>
    <active>true</active>
    <label>Apex</label>
</RecordType>