force-app/main/default/objects/CustomException__c/listViews/LastSeverDaysExceptions.listView-meta.xml
<ListView>
    <fullName>LastSeverDaysExceptions</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>ClassName__c</columns>
    <columns>MethodName__c</columns>
    <columns>ExceptionType__c</columns>
    <columns>LogDateTime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Last 7 Days Exceptions</label>
</ListView>